--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,8 @@
+:root{
+  --font-family: Oswald;
+  --font-weight: 700;
+}
+
 *,
 *::before,
 *::after {
@@ -5,7 +10,17 @@
 }
 
 html {
+  overflow: hidden;
   block-size: 100%;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #000;
+  border-radius: 6px;
 }
 
 .page {
@@ -18,6 +33,217 @@ html {
   background-color: #1b1919;
 }
 
+.content {
+  display: flex;
+  gap: 30px;
+  align-items: flex-end;
+  margin: 130px 30px;
+}
+
+.result {
+  display: flex;
+  flex-direction: column;
+}
+
+.result__video-container {
+  position: relative;
+  padding-bottom: 16px;
+  height: 421px;
+}
+
+video {
+  height: 100%;
+}
+
+
+.content__list {
+  position: relative;
+  overflow-y: scroll;
+  height: 300px;
+}
+
+.search-form {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 40px;
+  justify-items: end;
+  align-items: center;
+}
+
+.visually-hidden {
+ clip: rect(0 0 0 0);
+ clip-path: inset(50%);
+ width: 1px;
+ height: 1px;
+ overflow: hidden;
+ position: absolute;
+ white-space: nowrap;
+}
+
+img {
+  height: 100px;
+}
+
+.content__video-card {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin: 2px;
+  gap: 30px;
+}
+
+.content__video-card:hover {
+  background-color: gray;
+  text-decoration: underline solid #FFF;
+
+}
+
+.content__video-card:has(:focus) {
+border: 1px solid #fff;
+}
+
+.search-form__fieldset {
+  width: 100%;
+}
+
+.content__list-item {
+  padding-bottom: 30px;
+}
+
+.title {
+  font-family: var(--font-family);
+  font-weight: var(--font-weight);
+  line-height: 60px;
+  padding-bottom: 26px;
+  font-size: 75px;
+}
+
+.content__video-card-title {
+  font-size: 30px;
+  font-family: var(--font-family);
+  font-weight: var(--font-weight);
+}
+
+.content__accent {
+opacity: 0.5;
+}
+
+.content__video-card-description {
+  color: #fff;
+  font-size: 18px;
+}
+
+.search-form__fieldset-title {
+  font-size: 18px;
+    font-family: 'Oswald';
+}
+
+.search-form__fieldset {
+  display: flex;
+  border: none;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.button {
+  background: transparent;
+  align-self: end;
+  color: #FFF;
+  width: 200px;
+  height: 35px;
+  border: 1px solid #FFF;
+}
+
+.button:active {
+  background-color: #545050;
+}
+
+.button:hover {
+  text-decoration: underline;
+}
+
+.search-form__textfield {
+ background-color: transparent;
+ color: #FFF;
+ width: 206px;
+ height: 30px;
+ appearance: none;
+ border-top: 1px solid #fff;
+ border-right: 0px;
+ border-bottom: 1px solid #FFF;
+ border-left: 0px;
+ margin: 2px;
+}
+
+.search-form__textfield:focus {
+  border: 1px solid #FFF;
+}
+
+.search-form__textfield {
+  outline: none;
+}
+
+.search-form__checkbox-list {
+  display: inline-flex;
+  justify-content: space-between;
+  gap: 15px;
+}
+
+.search-form__label {
+  display: flex;
+  gap: 5px;
+  margin: 2px;
+  align-items: center;
+}
+
+.search-form__label:has(:focus-visible) {
+  border: 1px solid #FFF;
+}
+
+.search-form__label:hover {
+  text-decoration: underline;
+}
+
+.search-form__pseudo-checkbox {
+  display: inline-block;
+  border: 1px solid #FFF;
+  background-color: transparent;
+  height: 20px;
+  width: 20px;
+}
+
+.search-form input[type="checkbox"] {
+  position: absolute;
+  opacity: 0;
+}
+
+.search-form input[type="checkbox"]:checked + .search-form__pseudo-checkbox::before {
+  content: "";
+  display: block;
+  position: relative;
+  height: 100%;
+  border: 2px solid #000;
+  background-color: #FFF;
+}
+
+.more-button {
+  width: 100%;
+}
+
+button {
+  cursor: pointer;
+}
+
+a {
+  cursor: pointer;
+  text-decoration: none;
+}
+
+p {
+  font-family: Fira Sans Condensed;
+  font-weight: 400px;
+  font-size: 18px;
+}
+
 h1,
 h2,
 h3,
@@ -28,6 +254,7 @@ ol,
 li,
 blockquote,
 fieldset {
+  color: #fff;
   margin: 0;
   padding: 0;
 }
