--- a/styles/style.css
+++ b/styles/style.css
@@ -23,10 +23,46 @@ html {
   border-radius: 6px;
 }
 
+button {
+  cursor: pointer;
+}
+
+a {
+  cursor: pointer;
+  text-decoration: none;
+}
+
+p {
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+}
+
+h1,
+h2,
+h3,
+h4,
+p,
+ul,
+ol,
+li,
+blockquote,
+fieldset {
+  color: #fff;
+  margin: 0;
+  padding: 0;
+}
+
+ul,
+ol {
+  list-style: none;
+}
+
 .page {
-  inline-size: 1200px;
-  block-size: 100%;
+  display: flex;
+  justify-content: center;
   margin: auto;
+  block-size: 100%;
   color: #fff;
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
@@ -34,7 +70,8 @@ html {
 }
 
 .content {
-  display: flex;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
   gap: 30px;
   align-items: flex-end;
   margin: 130px 30px;
@@ -43,45 +80,60 @@ html {
 .result {
   display: flex;
   flex-direction: column;
+  width: 790px;
 }
 
 .result__video-container {
   position: relative;
-  padding-bottom: 16px;
-  height: 421px;
+  height: 386px;
 }
 
-video {
+.content__details {
+  width: 100%;
+}
+
+.result__video {
+  width: 100%;
   height: 100%;
+  object-fit: cover;
 }
-
 
 .content__list {
   position: relative;
   overflow-y: scroll;
   height: 300px;
+  width: 395px;
+}
+
+.content__list-item:active {
+  background-color: #545050;
+}
+
+.content__card-link:hover {
+  text-decoration: underline solid #FFF;
+}
+
+.content__card-link:focus-visible {
+  border: 1px solid #FFF;
 }
 
 .search-form {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 40px;
+  padding-top: 16px;
   justify-items: end;
   align-items: center;
 }
 
 .visually-hidden {
- clip: rect(0 0 0 0);
- clip-path: inset(50%);
- width: 1px;
- height: 1px;
- overflow: hidden;
- position: absolute;
- white-space: nowrap;
-}
-
-img {
-  height: 100px;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
 }
 
 .content__video-card {
@@ -89,16 +141,6 @@ img {
   grid-template-columns: 1fr 1fr;
   margin: 2px;
   gap: 30px;
-}
-
-.content__video-card:hover {
-  background-color: gray;
-  text-decoration: underline solid #FFF;
-
-}
-
-.content__video-card:has(:focus) {
-border: 1px solid #fff;
 }
 
 .search-form__fieldset {
@@ -112,29 +154,39 @@ border: 1px solid #fff;
 .title {
   font-family: var(--font-family);
   font-weight: var(--font-weight);
-  line-height: 60px;
+  text-transform: uppercase;
+  line-height: 75px;
   padding-bottom: 26px;
   font-size: 75px;
 }
 
+
 .content__video-card-title {
   font-size: 30px;
   font-family: var(--font-family);
-  font-weight: var(--font-weight);
 }
 
 .content__accent {
-opacity: 0.5;
+  color: #545050;
 }
 
 .content__video-card-description {
   color: #fff;
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-weight: 400;
   font-size: 18px;
+}
+
+.content__video-card-thumbnail {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .search-form__fieldset-title {
   font-size: 18px;
-    font-family: 'Oswald';
+  font-weight: 400;
+  font-family: 'Fira Sans Condensed', sans-serif;
 }
 
 .search-form__fieldset {
@@ -144,42 +196,26 @@ opacity: 0.5;
   gap: 5px;
 }
 
-.button {
-  background: transparent;
-  align-self: end;
-  color: #FFF;
-  width: 200px;
-  height: 35px;
-  border: 1px solid #FFF;
-}
-
-.button:active {
-  background-color: #545050;
-}
-
-.button:hover {
-  text-decoration: underline;
-}
-
 .search-form__textfield {
- background-color: transparent;
- color: #FFF;
- width: 206px;
- height: 30px;
- appearance: none;
- border-top: 1px solid #fff;
- border-right: 0px;
- border-bottom: 1px solid #FFF;
- border-left: 0px;
- margin: 2px;
-}
-
-.search-form__textfield:focus {
-  border: 1px solid #FFF;
+  background-color: transparent;
+  font-family: 'Fira Sans Condensed', sans-serif;
+  color: #FFF;
+  width: 100%;
+  height: 30px;
+  appearance: none;
+  border-top: 1px solid #fff;
+  border-right: 0px;
+  border-bottom: 1px solid #FFF;
+  border-left: 0px;
+  margin: 2px;
 }
 
 .search-form__textfield {
   outline: none;
+}
+
+.search-form__textfield:focus {
+  border-top: 1px solid #FFF;
 }
 
 .search-form__checkbox-list {
@@ -195,7 +231,8 @@ opacity: 0.5;
   align-items: center;
 }
 
-.search-form__label:has(:focus-visible) {
+.search-form__label:focus-within {
+  outline: none;
   border: 1px solid #FFF;
 }
 
@@ -226,41 +263,32 @@ opacity: 0.5;
   background-color: #FFF;
 }
 
-.more-button {
-  width: 100%;
+.search-fotm__label-text {
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-weight: 400;
 }
 
-button {
-  cursor: pointer;
-}
-
-a {
-  cursor: pointer;
-  text-decoration: none;
-}
-
-p {
-  font-family: Fira Sans Condensed;
-  font-weight: 400px;
+.button {
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-weight: 700;
   font-size: 18px;
+  background: transparent;
+  align-self: end;
+  color: #FFF;
+  width: 100%;
+  padding: 5px;
+  min-height: 50%;
+  border: 1px solid #FFF;
 }
 
-h1,
-h2,
-h3,
-h4,
-p,
-ul,
-ol,
-li,
-blockquote,
-fieldset {
-  color: #fff;
-  margin: 0;
-  padding: 0;
+.button:active {
+  background-color: #545050;
 }
 
-ul,
-ol {
-  list-style: none;
+.button:hover {
+  text-decoration: underline;
+}
+
+.button:focus {
+  outline: 1px solid #FFF;
 }
