--- a/styles/style.css
+++ b/styles/style.css
@@ -72,10 +72,11 @@ ol {
 .content {
   display: flex;
   width: 1302px;
-  height: 536px;
+  height: 545px;
   gap: 30px;
   align-items: flex-end;
 }
+
 
 .result {
   display: flex;
@@ -84,7 +85,7 @@ ol {
 
 .result__video-container {
   position: relative;
-  height: 437px;
+  height: 442px;
   width: 812px;
 }
 
@@ -101,24 +102,23 @@ ol {
 .content__list {
   position: relative;
   overflow-y: scroll;
-  height: 334px;
+  padding: 4px;
+  height: 345px;
   width: 462px;
-}
-
-.content__card-link {
-  background-color: #545050;
 }
 
 .content__card-link:hover {
   text-decoration: underline solid #FFF;
 }
 
-.content__card-link:focus {
- border: 10px solid #FFF;
+.content__card-link:focus-visible {
+  display: inline-block;
+  outline: none;
+  border: 1px solid #FFF;
 }
 
-.content__card-link:focus-visible {
-border: 1px solid #FFF;
+.content__video-card:active {
+  background-color: #545050;
 }
 
 .search-form {
@@ -151,17 +151,20 @@ border: 1px solid #FFF;
   width: 100%;
 }
 
-.content__list-item {
-  padding-bottom: 30px;
+.content__list-item:nth-child(n+6) {
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .title {
   font-family: var(--font-family);
   font-weight: var(--font-weight);
+  width: 310px;
   text-transform: uppercase;
-  line-height: 75px;
-  padding-bottom: 26px;
-  font-size: 75px;
+  letter-spacing: 1px;
+  line-height: 80px;
+  padding-bottom: 21px;
+  font-size: 86px;
 }
 
 .content__video-card-title {
@@ -206,21 +209,20 @@ border: 1px solid #FFF;
   color: #FFF;
   width: 100%;
   height: 30px;
+  font-size: 18px;
   appearance: none;
   border-top: 1px solid #fff;
   border-right: 0px;
   border-bottom: 1px solid #FFF;
   border-left: 0px;
-  margin: 2px;
-}
-
-.search-form__textfield {
-  font-size: 18px;
-  outline: none;
 }
 
 .search-form__textfield:focus {
-  border-top: 1px solid #FFF;
+  outline: none;
+}
+
+.search-form__textfield:focus-visible {
+  border: 1px solid #FFF;
 }
 
 .search-form__checkbox-list {
@@ -232,17 +234,19 @@ border: 1px solid #FFF;
 .search-form__label {
   display: flex;
   gap: 5px;
-  margin: 2px;
+  padding: 2px;
   align-items: center;
 }
 
-.search-form__label:focus-within {
-  outline: none;
+.search-form__label:focus-within  {
   border: 1px solid #FFF;
 }
 
 .search-form__label:hover {
   cursor: pointer;
+}
+
+.search-form__label-text:hover {
   text-decoration: underline;
 }
 
@@ -273,29 +277,49 @@ border: 1px solid #FFF;
   font-weight: 400;
 }
 
-.button {
+.button,
+.more-button {
   font-family: 'Fira Sans Condensed', sans-serif;
   font-weight: 700;
   font-size: 18px;
+  border: 1px solid #fff;
   background: transparent;
-  align-self: end;
   color: #FFF;
-  width: 100%;
-  padding: 6px;
-  min-height: 50%;
-  border: 1px solid #FFF;
+  margin-top: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.button:active {
+
+.search-form__submit-button {
+  width: 91%;
+  min-height: 61%;
+}
+
+.button:active,
+.more-button:active {
   background-color: #545050;
 }
 
-.button:hover {
+.button:hover,
+.more-button:hover {
   text-decoration: underline;
 }
 
-.button:focus {
+.button:focus-visible,
+.more-button:focus-visible {
   outline-color: #FFF;
-  outline-style: outset;
-  outline-offset: 3px;
+  outline-style: solid;
+  outline-offset: 2px;
+}
+
+.more-button {
+  width: 100%;
+  height: 34px;
+  gap: 10px;
+}
+
+.more__button-container {
+  margin-top: auto;
 }
