--- a/styles/style.css
+++ b/styles/style.css
@@ -62,6 +62,7 @@ ol {
   justify-content: center;
   align-items: center;
   margin: auto;
+  inline-size: 1200px;
   block-size: 100%;
   color: #fff;
   font-family: 'Fira Sans Condensed', sans-serif;
@@ -73,12 +74,14 @@ ol {
   display: flex;
   gap: 30px;
   align-items: flex-end;
+  inline-size: 1140px;
 }
 
 
 .result {
   display: flex;
   flex-direction: column;
+  row-gap: 16px;
 }
 video {
   width: 100%;
@@ -86,25 +89,25 @@ video {
 
 .result__video-container {
   position: relative;
+  height: 386px;
   inline-size: 711px;
-  margin-bottom: 16px;
 }
 
 .content__details {
-  width: 100%;
+  inline-size: 399px;
 }
 
 .result__video {
   width: 100%;
-  height: 100%;
+  height: 388px;
   object-fit: cover;
 }
 
 .content__list {
   position: relative;
-  overflow-y: scroll;
-  height: 345px;
-  width: 462px;
+  overflow: auto;
+  padding: 1px;
+  height: 298px;
 }
 
 .content__list-item {
@@ -243,11 +246,8 @@ outline: none;
 }
 
 .search-form__label:hover {
-  border-bottom: 1px solid #FFF;
-}
-
-.search-form__label:hover .search-form__textfield {
-  border-bottom: none;
+  text-decoration: underline 1px #FFF;
+  text-underline-offset: 5px;
 }
 
 .search-form__label:has(:focus-visible) {
@@ -286,7 +286,7 @@ outline: none;
 .button {
   font-family: 'Fira Sans Condensed', sans-serif;
   font-weight: 700;
-  height: 34px;
+  min-height: 34px;
   width: 100%;
   font-size: 18px;
   border: 1px solid #fff;
@@ -296,11 +296,6 @@ outline: none;
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-
-.search-form__submit-button {
-  height: 34px;
 }
 
 .button:active {
